# semantic-search-eval

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
configs/: example.yaml
semsearcheval/: constants.py  data.py  evaluate.py  logger.py  metrics.py  models.py  prompts.py  query_creator.py  utils.py  visualize.py
tests/: conftest.py  test_config.yaml  test_evaluation.py  test_metrics.py  test_models.py  test_query_creator.py
tests/data/: test_queries.csv  test_texts.csv
